hard-gists/e82c16e0401a77dec92a/run.log
=== Docker Run Log for e82c16e0401a77dec92a ===
Started at: Mi 29. Okt 20:47:53 CET 2025

[2025-10-29 20:47:54] START: Running container for e82c16e0401a77dec92a
[2025-10-29 20:47:54] SUCCESS: Container e2a4fea1aa20d473e4412d92d96abf72ecbf871c176a698f6331920e1d61aa85 started for e82c16e0401a77dec92a
=== Container logs for e82c16e0401a77dec92a ===
  File "/snippet.py", line 10
    print 'Installing django...'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e82c16e0401a77dec92a ===
[2025-10-29 20:47:56] INFO: Container e2a4fea1aa20d473e4412d92d96abf72ecbf871c176a698f6331920e1d61aa85 has stopped
